# krunner-translator

./: .gitignore  CMakeLists.txt  README.md  install.sh
src/: LanguageRepository.cpp  LanguageRepository.h  abstracttranslateengine.h  krunnertranslator.cpp  krunnertranslator.h  krunnertranslator.json  languagerepository.cpp  languagerepository.h  languages.h  supportedlanguages.h  translateShellProcess.cpp  translateShellProcess.h  translator.cpp  translator.h  translator.json
src/api/: deeplapi.cpp  deeplapi.h  shellprocess.cpp  shellprocess.h  translateshellprocess.cpp  translateshellprocess.h
src/provider/: bingtranslate.cpp  bingtranslate.h  deepltranslate.cpp  deepltranslate.h  googletranslate.cpp  googletranslate.h
